tests/golden/11_overload_duplicate_bad.ml
int f(int x) {
    return 1;
}

int f(int x) {
    return 2;
}

int main() {
    return f(10);
}
